--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
 
   </section>
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="content has-text-centered">
-        <p>
-          Built by <a href="https://dan.hersam.com">Dan Hersam</a>. Source on <a href="https://github.com/jaden/totp-generator">Github</a>.
-        </p>
+        <p>Mashed together by <a href="https://github.com/christovic">Dan Christovic</a>. Source on <a href="https://github.com/jaden/andotp-offline">Github</a>.</p>
+        <br>
+        <p>Decryption from <a href="https://github.com/flocke">Jakob Nixdorf</a>. Source on <a href="https://github.com/andOTP/WebDecrypt">Github</a>.</p>
+        <br>
+        <p>Generator & Design from <a href="https://dan.hersam.com">Dan Hersam</a>. Source on <a href="https://github.com/jaden/totp-generator">Github</a>.</p>
         <p>
           <a class="icon" href="https://github.com/jgthms/bulma">
             <i class="fa fa-github"></i>
@@ -86,7 +88,7 @@
         </p>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <script src="js/vue-2.4.0.min.js"></script>
   <script src="js/otpauth-3.1.3.min.js"></script>
