--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <div class="columns">
+      <div class="columns is-mobile">
         <div class="column">
           <div class="field">
             <button class="button" type="submit" id="btnDecrypt" onclick='decrypt()' disabled>Decrypt</button>
